# cargo-ros2

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Makefile  README.md  justfile
cargo-ros2/: Cargo.toml
cargo-ros2-bindgen/: Cargo.toml
cargo-ros2-bindgen/src/: ament.rs  generator.rs
cargo-ros2-bindgen/tests/: integration_tests.rs
cargo-ros2/src/: ament_installer.rs  cache.rs  config_patcher.rs  dependency_parser.rs  lib.rs  main.rs  package_discovery.rs  workflow.rs
cargo-ros2/tests/: integration_tests.rs
docs/: ARCH.md  CLI_REFERENCE.md  DESIGN.md  ROADMAP.md
docs/ROADMAP/: milestones.md  phase-0-preparation.md  phase-1-idl-generator.md  phase-2-tools.md  phase-3-production.md  phase-4-integration.md  testing-strategy.md  timeline.md
docs/archive/: UNIFIED_ARCHITECTURE.md
examples/: README.md
examples/simple_publisher/: Cargo.toml
examples/simple_publisher/src/: main.rs
examples/simple_subscriber/: .gitignore  Cargo.toml
examples/simple_subscriber/src/: main.rs
rosidl-codegen/: Cargo.toml
rosidl-codegen/benches/: generation_benchmark.rs
rosidl-codegen/src/: generator.rs  lib.rs  templates.rs  types.rs  utils.rs
rosidl-codegen/templates/: action_idiomatic.rs.jinja  action_rmw.rs.jinja  cargo.toml.jinja  lib.rs.jinja  message_idiomatic.rs.jinja  message_rmw.rs.jinja  service_idiomatic.rs.jinja  service_rmw.rs.jinja
rosidl-codegen/tests/: compilation_test.rs  integration_test.rs  parity_helpers.rs  parity_test.rs
rosidl-parser/: Cargo.toml
rosidl-parser/src/: lexer.rs  parser.rs
testing_workspaces/: README.md
testing_workspaces/complex_workspace/: justfile
testing_workspaces/complex_workspace/src/robot_controller/: Cargo.toml  package.xml
testing_workspaces/complex_workspace/src/robot_controller/src/: main.rs
