[package]
name = "cargo-ros2-bindgen"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust binding generator for ROS 2 interface packages"

[[bin]]
name = "cargo-ros2-bindgen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
