[package]
name = "cargo-ros2-bindgen"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust binding generator for ROS 2 interface packages"

[lib]
name = "cargo_ros2_bindgen"
path = "src/lib.rs"

[[bin]]
name = "cargo-ros2-bindgen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rosidl-codegen = { path = "../rosidl-codegen" }
rosidl-parser = { path = "../rosidl-parser" }

[dev-dependencies]
tempfile = "3.8"
