[package]
name = "rosidl-codegen"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Code generator for ROS 2 Rust bindings"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
