[package]
name = "rosidl-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Parser for ROS IDL files (.msg, .srv, .action)"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
